--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
       <!-- Icons -->
       <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
       <!-- Favicon -->
-      <link rel="icon" href="/assets/2263d6a64d36999964e5c2aa54a7fa0f - Copy.ico">
+      <link rel="icon" href="/assets/Letter.ico">
 </head>
 
 <body>
