--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -3,7 +3,7 @@
 
   <a class="navbar-brand"
      href="/">
-    <img src="assets/2263d6a64d36999964e5c2aa54a7fa0f.png"
+    <img src="assets/Letter.png"
          width="30"
          height="30"
          class="d-inline-block align-top"
