1) Error page updated, 2) Profile page is now connected via post method to game page, 3)paths corrected from absolute to relative

--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -236,25 +236,38 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.games[i].players[0].name %></span>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[0].name %></span>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.scores[i][0] %>
-                                    </span>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][0] %>
+                                      </span>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -279,25 +292,37 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.games[i].players[1].name %></span>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[1].name %></span>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.scores[i][1] %>
-                                    </span>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][1] %>
+                                      </span>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -322,34 +347,46 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <% if ( positionStats.posAllGamesStats.games[i].players[2].name != null){ %>
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.games[i].players[2].name %> </span>
-                                    <% } else { %>
-                                    <span class="name mb-0 text-sm">
-                                      &nbsp; </span>
-                                    <% } %>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.games[i].players[2].name != null){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[2].name %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <% if ( positionStats.posAllGamesStats.scores[i][2] > 0){ %>
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.scores[i][2] %> </span>
-                                    <% } else { %>
-                                    <span class="name mb-0 text-sm">
-                                      &nbsp; </span>
-                                    <% } %>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.scores[i][2] > 0){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][2] %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -374,34 +411,46 @@
                           <tr id="cell_hover"
                               class="all_cells_hover">
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <% if ( positionStats.posAllGamesStats.games[i].players[3].name != null){ %>
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.games[i].players[3].name %> </span>
-                                    <% } else { %>
-                                    <span class="name mb-0 text-sm">
-                                      &nbsp; </span>
-                                    <% } %>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.games[i].players[3].name != null){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.games[i].players[3].name %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                             <td>
-                              <a href="/game/<%= positionStats.posAllGamesStats.games[i]._id %>">
-                                <div class="media align-items-center">
-                                  <div class="media-body">
-                                    <% if ( positionStats.posAllGamesStats.scores[i][3] > 0){ %>
-                                    <span class="name mb-0 text-sm">
-                                      <%= positionStats.posAllGamesStats.scores[i][3] %> </span>
-                                    <% } else { %>
-                                    <span class="name mb-0 text-sm">
-                                      &nbsp; </span>
-                                    <% } %>
+                              <form action="/game/<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                    method="post">
+                                <button type="submit"
+                                        name="game_id"
+                                        value="<%= positionStats.posAllGamesStats.games[i]._id %>"
+                                        class="my-btn-link">
+                                  <div class="media align-items-center">
+                                    <div class="media-body">
+                                      <% if ( positionStats.posAllGamesStats.scores[i][3] > 0){ %>
+                                      <span class="name mb-0 text-sm">
+                                        <%= positionStats.posAllGamesStats.scores[i][3] %> </span>
+                                      <% } else { %>
+                                      <span class="name mb-0 text-sm">
+                                        &nbsp; </span>
+                                      <% } %>
+                                    </div>
                                   </div>
-                                </div>
-                              </a>
+                                </button>
+                              </form>
                             </td>
                           </tr>
                           <% } %>
@@ -545,22 +594,34 @@
         $('#general-player' + j + '-table-body').append(
           '<tr id="cell_hover" class="all_cells_hover">  \
             <td> \
-              <a href="/game/' + posStats.games[i]._id + '"> \
+              <form action="/game/'+ posStats.games[i]._id +'" \
+                    method="post"> \
+                <button type="submit" \
+                        name="game_id" \
+                        value="'+ posStats.games[i]._id +'" \
+                        class="my-btn-link"> \
                   <div class="media align-items-center" > \
                     <div class="media-body" > \
                       <span class="name mb-0 text-sm">' + tempName + '</span> \
                     </div> \
                   </div> \
-              </a> \
+                </button> \
+              </form> \
             </td> \
             <td > \
-              <a href="/game/' + posStats.games[i]._id + '"> \
+              <form action="/game'+ posStats.games[i]._id +'" \
+                    method="post"> \
+                <button type="submit" \
+                        name="game_id" \
+                        value="'+ posStats.games[i]._id +'" \
+                        class="my-btn-link"> \
                   <div class="media align-items-center" > \
                     <div class="media-body"> \
                       <span class="name mb-0 text-sm">' + tempScore + '</span> \
                     </div> \
                   </div> \
-                </a> \
+                </button> \
+              </form> \
             </td> \
           </tr>'
         );
