--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -3,11 +3,11 @@
 
   <a class="navbar-brand"
      href="/">
-    <img src="assets/Letter.png"
+    <img src="/assets/Letter.png"
          width="30"
          height="30"
          class="d-inline-block align-top"
-         alt="Scrabble Letter A">
+         alt="Img">
   </a>
 
   <button class="navbar-toggler"
