--- a/views/error_page.ejs
+++ b/views/error_page.ejs
@@ -15,8 +15,8 @@
                 <div class="col-lg-7 col-md-10 col-sm-10">
                     <h1 class="display-2 text-white home-title">Error 404: Page not found!</h1>
                     <p class="home-subtitle">This option is still under construction.</p>
-                    <a href="/scrabble-statistics"
-                       class="btn btn-neutral rounded-pill home-btn-start-game">Go back to Scrabble Statistics</a>
+                    <a href="/5fae6b01eeab478c1207e2bf"
+                       class="btn btn-neutral rounded-pill home-btn-start-game">Go to player's profile</a>
                     <a href="/"
                        class="btn btn-neutral rounded-pill home-btn-start-game">Go back to Home Page</a>
                 </div>
