--- a/views/partials/end_file.ejs
+++ b/views/partials/end_file.ejs
@@ -3,7 +3,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <!-- Argon JS -->
-<script src="js/argon.js"></script> 
+<script src="/js/argon.js"></script> 
 </body>
 
 </html>
